@@ -1,3 +1,9 @@
+Wed Aug 30 20:03:44 CEST 2006  Guillaume Desmottes <cass@skynet.be>
+
+	* src/fe-gnome/migration.h:
+	* src/fe-gnome/migration.c:
+	  - Forgot to add these files on the SVN. Sorry dudes.
+
 Mon Aug 28 21:07:09 CEST 2006  Guillaume Desmottes <cass@skynet.be>
 
 	* src/fe-gnome/util.c:
